2010-03-10  Eric Botcazou  <ebotcazou@adacore.com>

	* config/sparc/sol2-bi.h (CC1_SPEC): Default to -mcpu=v9 for -m32.
	* config/sparc/t-sol2-64 (MULTILIB_DIRNAMES): Use sparcv8plus.

2010-03-10  Jan Hubicka  <jh@suse.cz>

	PR c/43288
	* ipa.c (function_and_variable_visibility) Normalize COMMON bits.
	* varasm.c (get_variable_section): Don't do that here...
	(make_decl_rtl): ... and here.
	(do_assemble_alias): Produce decl RTL.
	(assemble_alias): Likewise.

2010-03-10  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43290
	* reg-notes.def (REG_CFA_SET_VDRAP): New note.
	* dwarf2out.c (dwarf2out_frame_debug_expr): Remove rule 20 - setting
	of fde->vdrap_reg.
	(dwarf2out_frame_debug): Handle REG_CFA_SET_VDRAP note.
	(based_loc_descr): Only express drap or vdrap regno based expressions
	using DW_OP_fbreg when not optimizing.
	* config/i386/i386.c (ix86_get_drap_rtx): When not optimizing,
	make the vDRAP = DRAP assignment RTX_FRAME_RELATED_P and add
	REG_CFA_SET_VDRAP note.

2010-03-10  Alexander Monakov  <amonakov@ispras.ru>

	PR tree-optimization/43236
	* tree-loop-distribution.c (generate_memset_zero): Fix off-by-one
	error in calculation of base address in reverse iteration case.
	(generate_builtin): Take number of latch executions if the statement
	is in the latch.

2010-03-10  Andrey Belevantsev  <abel@ispras.ru>

	PR middle-end/42859
	* tree-eh.c: Include pointer-set.h.
	(lower_eh_dispatch): Filter out duplicate case labels and
	remove the unneeded edge when the label is unused.  Return
	true when some edges are removed.
	(execute_lower_eh_dispatch): When any lowering resulted in
	removing an edge, also delete unreachable blocks.

2010-03-10  Jakub Jelinek  <jakub@redhat.com>

	PR bootstrap/43287
	* config/rs6000/rs6000.c (rs6000_delegitimize_address): Handle
	UNSPEC_MACHOPIC_OFFSET.

2010-03-09  Andreas Schwab  <schwab@linux-m68k.org>

	PR target/43294
	* config/m68k/m68k.c (TARGET_DELEGITIMIZE_ADDRESS): Define.
	(m68k_delegitimize_address): New function.
